# TUI_cardiverse

./: .env.example  .gitignore  Cargo.toml  PRD.md  README.md  TECH_DESIGN.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
crates/cardiverse-agent/: Cargo.toml
crates/cardiverse-agent/src/: lib.rs
crates/cardiverse-ai/: Cargo.toml
crates/cardiverse-ai/src/: compiler.rs  config.rs  lib.rs  normalizer.rs  suggest.rs
crates/cardiverse-cli/: Cargo.toml
crates/cardiverse-cli/src/: main.rs
crates/cardiverse-core/: Cargo.toml
crates/cardiverse-core/src/: action.rs  balance.rs  content.rs  engine.rs  lib.rs  replay.rs  types.rs
crates/cardiverse-tui/: Cargo.toml
crates/cardiverse-tui/src/: app.rs  lib.rs  render.rs  replay.rs
src/cli/: args.ts  index.ts
src/commands/: handlers.ts  parser.ts  types.ts
src/compiler/: balance.ts  index.ts  llmCompiler.ts  schema.ts  stubCompiler.ts  types.ts
src/content/bosses/: initEcho.ts
src/content/story/: terminalCardiverse.ts
src/control/: aiPlayer.ts  playerActions.ts
src/core/: actions.ts  bossAi.ts  effects.ts  log.ts  state.ts  turn.ts  types.ts  winner.ts
src/storage/: battleLog.ts  paths.ts
src/tui/: autoPlayer.ts  render.ts  terminalGame.ts
test/cli/: args.test.ts
test/commands/: handlers.test.ts  parser.test.ts
test/compiler/: llmCompiler.test.ts  stubCompiler.test.ts
test/content/: story.test.ts
test/control/: aiPlayer.test.ts  playerActions.test.ts
test/core/: actions.test.ts  effects.test.ts  state.test.ts  turn.test.ts  winner.test.ts
test/integration/: mvpChallenge.test.ts
test/storage/: battleLog.test.ts
test/tui/: autoPlayer.test.ts  render.test.ts  terminalGame.test.ts
