[workspace]
members = [
  "crates/cardiverse-core",
  "crates/cardiverse-ai",
  "crates/cardiverse-tui",
  "crates/cardiverse-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/terminal-cardiverse/terminal-cardiverse"
homepage = "https://github.com/terminal-cardiverse/terminal-cardiverse"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
dotenvy = "0.15"
proptest = "1"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
