[package]
name = "cardiverse-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Headless playtest agent and report generation for Terminal Cardiverse."

[dependencies]
anyhow.workspace = true
cardiverse-ai = { path = "../cardiverse-ai" }
cardiverse-core = { path = "../cardiverse-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
