[package]
name = "cardiverse-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenAI-compatible card compiler and AI helpers for Terminal Cardiverse."

[dependencies]
anyhow.workspace = true
cardiverse-core = { path = "../cardiverse-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true
