[package]
name = "cardiverse-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal Cardiverse command-line entrypoint."

[[bin]]
name = "cardiverse"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cardiverse-ai = { path = "../cardiverse-ai" }
cardiverse-core = { path = "../cardiverse-core" }
cardiverse-tui = { path = "../cardiverse-tui" }
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true
