[package]
name = "cardiverse-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ratatui battle cockpit for Terminal Cardiverse."

[dependencies]
anyhow.workspace = true
cardiverse-ai = { path = "../cardiverse-ai" }
cardiverse-core = { path = "../cardiverse-core" }
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
cardiverse-ai = { path = "../cardiverse-ai" }
